# Antenna_theory

./: README.md
Antenna_Theory_Studio/: requirements.txt
Antenna_Theory_Studio/antenna_studio/: main.py
Antenna_Theory_Studio/antenna_studio/core/: mpl_canvas.py  theme.py
Antenna_Theory_Studio/antenna_studio/modules/: ch14_circular.py  ch1_radiation.py  ch2_pattern.py  ch2_polarization.py  ch4_dipole.py  ch6_array.py  ch6_synthesis.py  mcq.py
Antenna_Theory_Studio_v2/: README.md  antenna_studio.spec  pyproject.toml  requirements.txt  run.py
Antenna_Theory_Studio_v2/antenna_studio/: __init__.py  main.py
Antenna_Theory_Studio_v2/antenna_studio/core/: __init__.py  equation.py  formulas.py  mpl_canvas.py
Antenna_Theory_Studio_v2/antenna_studio/modules/: __init__.py  ch14_patch.py  ch2_directivity.py  ch2_friis.py  ch2_plf.py  ch2_regions.py  ch4_dipole.py  ch4_image.py  ch6_array.py  ch6_pattern_mult.py  ch6_planar.py  ch6_synthesis.py  derivation.py  mcq.py  quiz.py
Antenna_Theory_Studio_v2/tests/: test_formulas.py
