[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antenna-theory-studio"
version = "1.1.0"
description = "Διαδραστικό εκπαιδευτικό GUI για τη Θεωρία Κεραιών (Balanis: Κεφ. 1, 2, 4, 6, 14)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Vasileios Banakos" }]
keywords = ["antennas", "balanis", "education", "pyqt5", "matplotlib", "rf"]

dependencies = [
    "PyQt5>=5.15",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
antenna-studio = "antenna_studio.main:main"

[project.gui-scripts]
antenna-studio-gui = "antenna_studio.main:main"

[tool.setuptools.packages.find]
include = ["antenna_studio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
